University -> Center for kids who can't read good

--- a/MuchosLocalization/localization/english/buildings_l_english.yml
+++ b/MuchosLocalization/localization/english/buildings_l_english.yml
@@ -66,19 +66,19 @@
  building_special_greenhouse_01_desc:0 "#F This building is seemingly excellent for growing vegetables.#!"
  building_type_special_greenhouse_01:0 "Glass Monument"
  building_type_special_greenhouse_01_desc:1 "#F This building is seemingly excellent for growing vegetables.#!"
- building_type_university_01:0 "University"
+ building_type_university_01:0 "Center for kids who can't read good."
  building_type_university_01_desc:1 "#F A place of higher learning for those with influence, and gold, enough to gain admission.#!"
- building_university_01:0 "University I"
+ building_university_01:0 "Center for kids who can't read good. I"
  building_university_01_desc:0 "$building_type_university_01_desc$"
- building_university_02:0 "University II"
+ building_university_02:0 "Center for kids who can't read good. II"
  building_university_02_desc:0 "$building_type_university_01_desc$"
- building_university_03:0 "University III"
+ building_university_03:0 "Center for kids who can't read good. III"
  building_university_03_desc:0 "$building_type_university_01_desc$"
- building_university_04:0 "University IV"
+ building_university_04:0 "Center for kids who can't read good. IV"
  building_university_04_desc:0 "$building_type_university_01_desc$"
- building_university_05:0 "University V"
+ building_university_05:0 "Center for kids who can't read good. V"
  building_university_05_desc:0 "$building_type_university_01_desc$"
- building_university_06:0 "University VI"
+ building_university_06:0 "Center for kids who can't read good. VI"
  building_university_06_desc:0 "$building_type_university_01_desc$"
  
  building_type_pastures_01:2 "Pastoral Lands"
@@ -716,28 +716,28 @@
  building_holy_site_prophetic_mosque_01:0 "$building_type_holy_site_prophetic_mosque_01$"
  building_holy_site_prophetic_mosque_01_desc:0 "$building_type_holy_site_prophetic_mosque_01_desc$"
  
- building_type_generic_university:0 "University"
- building_type_generic_university_desc:0 "#F A university is a place of higher learning, reserved for those of good standing and wealth who are deemed worthy enough. It attracts scholars and scientists who debate, study, scribe, and ultimately pool their knowledge within its walls.#!"
+ building_type_generic_university:0 "Center for kids who can't read good."
+ building_type_generic_university_desc:0 "#F A Center for kids who can't read good. is a place of higher learning, reserved for those of good standing and wealth who are deemed worthy enough. It attracts scholars and scientists who debate, study, scribe, and ultimately pool their knowledge within its walls.#!"
  building_generic_university:0 "$building_type_generic_university$"
  building_generic_university_desc:0 "$building_type_generic_university_desc$"
  
- building_type_al_azhar_university:0 "Al-Azhar University"
- building_type_al_azhar_university_desc:0 "#F $building_type_generic_university_desc$\n\nThe Al-Azhar University is named in honor of Fatimah, the daughter of Muhammad, who was often called 'al-Zahra' (the Luminous).#!"
+ building_type_al_azhar_university:0 "Al-Azhar Center for kids who can't read good."
+ building_type_al_azhar_university_desc:0 "#F $building_type_generic_university_desc$\n\nThe Al-Azhar Center for kids who can't read good. is named in honor of Fatimah, the daughter of Muhammad, who was often called 'al-Zahra' (the Luminous).#!"
  building_al_azhar_university:0 "$building_type_al_azhar_university$"
  building_al_azhar_university_desc:0 "$building_type_al_azhar_university_desc$"
  
- building_type_sankore_university:0 "The University of Sankoré"
- building_type_sankore_university_desc:0 "#F $building_type_generic_university_desc$\n\nThe University of Sankoré, which started out as a Mosque, transformed into a center of learning after acquiring a wealth of books from traveling merchants.#!"
+ building_type_sankore_university:0 "The Center for kids who can't read good. of Sankoré"
+ building_type_sankore_university_desc:0 "#F $building_type_generic_university_desc$\n\nThe Center for kids who can't read good. of Sankoré, which started out as a Mosque, transformed into a center of learning after acquiring a wealth of books from traveling merchants.#!"
  building_sankore_university:0 "$building_type_sankore_university$"
  building_sankore_university_desc:0 "$building_type_sankore_university_desc$"
  
- building_type_siena_university:0 "The University of Siena"
- building_type_siena_university_desc:0 "#F $building_type_generic_university_desc$\n\nThe University of Siena and the maestri who serve within are entirely funded by taxes from Siena itself, more specifically a tax imposed on those who rents rooms to its students.#!"
+ building_type_siena_university:0 "The Center for kids who can't read good. of Siena"
+ building_type_siena_university_desc:0 "#F $building_type_generic_university_desc$\n\nThe Center for kids who can't read good. of Siena and the maestri who serve within are entirely funded by taxes from Siena itself, more specifically a tax imposed on those who rents rooms to its students.#!"
  building_siena_university:0 "$building_type_siena_university$"
  building_siena_university_desc:0 "$building_type_siena_university_desc$"
  
- building_type_nalanda_university:0 "Nalanda University"
- building_type_nalanda_university_desc:0 "#F $building_type_generic_university_desc$\n\nThe Nalanda University is an important seat of Vedic scholarship and attracts students from as far away as Tibet and China.#!"
+ building_type_nalanda_university:0 "Nalanda Center for kids who can't read good."
+ building_type_nalanda_university_desc:0 "#F $building_type_generic_university_desc$\n\nThe Nalanda Center for kids who can't read good. is an important seat of Vedic scholarship and attracts students from as far away as Tibet and China.#!"
  building_nalanda_university:0 "$building_type_nalanda_university$"
  building_nalanda_university_desc:0 "$building_type_nalanda_university_desc$"
  
