--- a/MuchosLocalization/localization/english/important_actions_l_english.yml
+++ b/MuchosLocalization/localization/english/important_actions_l_english.yml
@@ -257,8 +257,8 @@
  action_in_debt_desc:2 "You are currently in [debt|E]!\n\nBeing in Debt has the following effects:\n$BULLET_WITH_TAB$Cannot Declare [war|E]\n$BULLET_WITH_TAB$Cannot reinforce [men_at_arms|E]\n$BULLET_WITH_TAB$[county_corruption|E] spreads in your [domain|E]\n\nConsider reducing your expenses, for example by:\n$BULLET_WITH_TAB$Disbanding your [armies|E]\n$BULLET_WITH_TAB$Reducing the Size of — or destroying — your [men_at_arms|E] [regiments|E]"
  action_in_debt_click:0 ""
 
- action_send_child_to_university:0 "Send Child to University"
- action_send_child_to_university_label:0 "Send Child to University"
+ action_send_child_to_university:0 "Send Child to Center for kids who can't read good."
+ action_send_child_to_university_label:0 "Send Child to Center for kids who can't read good."
  action_send_child_to_university_click:0 "#I Click to open the Education Window#!"
  is_sent_to_university:0 "[secondary_actor.GetFirstName] will get a better education than usual!"
 
