--- a/MuchosLocalization/localization/english/major_decisions_l_english.yml
+++ b/MuchosLocalization/localization/english/major_decisions_l_english.yml
@@ -38,30 +38,30 @@
  major_decisions.1105.a:0 "That pretender will never last..."
 
  
- major_decisions.2001.t:0 "University"
- major_decisions.2001.desc_first:0 "A new age of knowledge is upon us! I have met with a steady stream of builders and scholars, and the plans for the magnificent university are taking form.\n\n"
- major_decisions.2001.desc_more:0 "The build master informs me that the bricks for the university are ready to be laid — all that remains to be decided is a location and a name!"
- major_decisions.2001.desc:0 "The build master informs me that the bricks for the university are ready to be laid — all that remains to be decided is a name!"
- major_decisions.2001.b_fes:0 "I will found the University of al-Qarawiyyin!"
- major_decisions.2001.b_cairo:0 "I will found the Al-Azhar University!"
- major_decisions.2001.b_bologna:0 "I will found the University of Bologna!"
- major_decisions.2001.b_salamanca:0 "I will found the University of Salamanca!"
- major_decisions.2001.b_madrid:0 "I will found the Complutense University of Madrid!"
- major_decisions.2001.b_oxford:0 "I will found the University of Oxford!"
- major_decisions.2001.b_cambridge:0 "I will found University of Cambridge!"
- major_decisions.2001.b_padua:0 "I will found the University of Padu!"
- major_decisions.2001.b_siena:0 "I will found the University of Siena!"
- major_decisions.2001.b_coimbra:0 "I will found the University of Coimbra!"
- major_decisions.2001.b_napoli:0 "I will found the Holy Roman University of Naples!"
- major_decisions.2001.b_tirakka:0 "I will found the University of Sankoré!"
- major_decisions.2001.fallback:0 "I will found... no university today."
+ major_decisions.2001.t:0 "Center for kids who can't read good."
+ major_decisions.2001.desc_first:0 "A new age of knowledge is upon us! I have met with a steady stream of builders and scholars, and the plans for the magnificent Center for kids who can't read good. are taking form.\n\n"
+ major_decisions.2001.desc_more:0 "The build master informs me that the bricks for the Center for kids who can't read good. are ready to be laid — all that remains to be decided is a location and a name!"
+ major_decisions.2001.desc:0 "The build master informs me that the bricks for the Center for kids who can't read good. are ready to be laid — all that remains to be decided is a name!"
+ major_decisions.2001.b_fes:0 "I will found the Center for kids who can't read good. of al-Qarawiyyin!"
+ major_decisions.2001.b_cairo:0 "I will found the Al-Azhar Center for kids who can't read good.!"
+ major_decisions.2001.b_bologna:0 "I will found the Center for kids who can't read good. of Bologna!"
+ major_decisions.2001.b_salamanca:0 "I will found the Center for kids who can't read good. of Salamanca!"
+ major_decisions.2001.b_madrid:0 "I will found the Complutense Center for kids who can't read good. of Madrid!"
+ major_decisions.2001.b_oxford:0 "I will found the Center for kids who can't read good. of Oxford!"
+ major_decisions.2001.b_cambridge:0 "I will found Center for kids who can't read good. of Cambridge!"
+ major_decisions.2001.b_padua:0 "I will found the Center for kids who can't read good. of Padu!"
+ major_decisions.2001.b_siena:0 "I will found the Center for kids who can't read good. of Siena!"
+ major_decisions.2001.b_coimbra:0 "I will found the Center for kids who can't read good. of Coimbra!"
+ major_decisions.2001.b_napoli:0 "I will found the Holy Roman Center for kids who can't read good. of Naples!"
+ major_decisions.2001.b_tirakka:0 "I will found the Center for kids who can't read good. of Sankoré!"
+ major_decisions.2001.fallback:0 "I will found... no Center for kids who can't read good. today."
  major_decisions.2001.fallback.tt:0 "The county's Development is too low, or it already has a Special Building Slot"
 
- major_decisions.2002.desc:1 "A new age of knowledge is upon us; a university has been founded in the realm of [founder.GetName]. It is quickly becoming a hub for scholars and other learned people, proclaiming it the ultimate environment for young people to learn the trivium and quadrivium, and all else one might need in order to understand the world."
+ major_decisions.2002.desc:1 "A new age of knowledge is upon us; a Center for kids who can't read good. has been founded in the realm of [founder.GetName]. It is quickly becoming a hub for scholars and other learned people, proclaiming it the ultimate environment for young people to learn the trivium and quadrivium, and all else one might need in order to understand the world."
  major_decisions.2002.a:1 "May their knowledge benefit us all!"
 
  major_decisions.2011.t:0 "The Wise [new_courtier.GetWomanMan|U]"
- major_decisions.2011.desc:0 "[new_courtier.GetName], a [new_courtier.GetWomanMan] both [ROOT.Char.Custom2('DescriptorPositive', SCOPE.sC('new_courtier') )] and wise, greets me graciously.\n\n"I have heard of your new University! A [ROOT.Char.GetTitleAsNameNoTooltip] that favors knowledge to that extent... I would be honored to serve you.""
+ major_decisions.2011.desc:0 "[new_courtier.GetName], a [new_courtier.GetWomanMan] both [ROOT.Char.Custom2('DescriptorPositive', SCOPE.sC('new_courtier') )] and wise, greets me graciously.\n\n"I have heard of your new Center for kids who can't read good.! A [ROOT.Char.GetTitleAsNameNoTooltip] that favors knowledge to that extent... I would be honored to serve you.""
  major_decisions.2011.a:0 "Welcome, welcome!"
  major_decisions.2011.b:0 "You will find no place for you here."
 
