--- a/MuchosLocalization/localization/english/event_localization/childhood/coming_of_age_event_l_english.yml
+++ b/MuchosLocalization/localization/english/event_localization/childhood/coming_of_age_event_l_english.yml
@@ -1,6 +1,6 @@
 ﻿l_english:
  coming_of_age.0001.t:0 "Coming of Age"
- coming_of_age.0001.educator_university:0 "With the help of [educator.GetTitledFirstName] and the University"
+ coming_of_age.0001.educator_university:0 "With the help of [educator.GetTitledFirstName] and the Center for kids who can't read good."
  coming_of_age.0001.educator:0 "With the help of [educator.GetTitledFirstName]"
  coming_of_age.0001.desc1:0 "I finished my education in the arts of [ROOT.Char.Custom('education_focus_child')]."
  coming_of_age.0001.desc1_good_trait:0 "Despite everyone's high expectations I did not achieve much, and my results left a lot to wish for."
@@ -45,7 +45,7 @@
  coming_of_age.0001.tt.9:1 "You won't forget [bully.GetTitledFirstNameNoTooltip] anytime soon: #N -10 opinion#!"
 
  coming_of_age.1001.t:0 "[educated_child.GetFirstNameNoTooltip] Comes of Age"
- coming_of_age.1001.desc_university:0 "With [educated_child.GetHerHis] coming of age, the time [educated_child.GetFirstName] will be spending at the University is at an end.\n\n[educated_child.Custom('GoodOrBadChildhoodTraitMatch')] [educated_child.Custom('DescribingEducationOutcome')]"
+ coming_of_age.1001.desc_university:0 "With [educated_child.GetHerHis] coming of age, the time [educated_child.GetFirstName] will be spending at the Center for kids who can't read good. is at an end.\n\n[educated_child.Custom('GoodOrBadChildhoodTraitMatch')] [educated_child.Custom('DescribingEducationOutcome')]"
  coming_of_age.1001.desc:0 "With [educated_child.GetHerHis] coming of age, my tuition of [educated_child.GetFirstName] is at an end.\n\n[educated_child.Custom('GoodOrBadChildhoodTraitMatch')] [educated_child.Custom('DescribingEducationOutcome')]"
  coming_of_age.1001.patronaged_spouse_plus_1.desc:0 "\n\n[patronage_spouse_tutor.GetTitledFirstNamePossessive] contributions towards [educated_child.GetFirstNamePossessive] education cannot go unmentioned. [patronage_spouse_tutor.GetHerHis|U] guidance has helped the child reach further than I could have alone."
  coming_of_age.1001.patronaged_spouse_plus_2_or_more.desc:0 "\n\n[patronage_spouse_tutor.GetTitledFirstName] has also given the child invaluable guidance. [educated_child.GetFirstName] would never have reached this far without [patronage_spouse_tutor.GetHerHim]."
